post-integration changes

--- a/etc/ipmi-hipchat-bot.cfg.example
+++ b/etc/ipmi-hipchat-bot.cfg.example
@@ -6,3 +6,4 @@ workdir:      .
 ipmiusername: exampleUsername
 ipmipassword: examplePassword
 dbpath: /var/db/hipchatbot/ipmibot.sqlite3
+ipmitoolpath: /usr/local/bin/ipmitool
